# enhanced_adaptive_dbscan

./: .buildinfo  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  FILES_CHANGED.md  IMPLEMENTATION_SUMMARY.md  License  PHASE5_SUMMARY.md  README.md  README.rst  RESEARCH_COMPARISON_ANALYSIS.md  REVIEW_SUMMARY.txt  advanced_features.html  api.html  changelog.html  conf.py  contributing.html  genindex.html  getting_started.html  index.html  objects.inv  overview.html  project_flow.tex  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  usage.html  usage_examples.html  workflows.html
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: docs.yml  python-package.yml  release.yml  wheels.yml
_sources/: api.rst.txt  changelog.md.txt  contributing.md.txt  getting_started.md.txt  index.rst.txt  overview.md.txt  usage.md.txt  usage_examples.md.txt  workflows.md.txt
_sources/api/: algorithms.md.txt  core.md.txt  optimization.md.txt
_static/: documentation_options.js
api/: algorithms.html  core.html  optimization.html  production.html
docs/: index.rst
docs/source/: advanced_features.md  conf.py  index.rst
docs/source/api/: production.md
enhanced_adaptive_dbscan/: __init__.py  adaptive_optimization.py  boundary_processor.py  cluster_quality_analyzer.py  dbscan.py  deep_clustering.py  density_engine.py  ensemble_clustering.py  hdbscan_clustering.py  multi_density_clustering.py  production_pipeline.py  scalable_indexing.py  streaming_engine.py  utils.py  web_api.py
examples/: advanced_configuration.py  basic_usage_guide.py  comprehensive_demo.py  phase5_advanced_features.py  quick_phase5_demo.py  real_world_use_cases.py  research_aligned_features.py  usage_example.py
phase4_models/adaptive_dbscan_20250811_230443/: metadata.json  model.pkl
scripts/: bump_version.py
tests/: test_adaptive_optimization.py  test_dbscan.py  test_deep_clustering.py  test_density_engine.py  test_ensemble_clustering.py  test_hdbscan_clustering.py  test_multi_density_basic.py  test_multi_density_clustering.py  test_predict_kdist.py  test_production_features.py  test_production_integration.py  test_scalable_indexing.py  test_sklearn_api.py
